# zero2prod

./: Cargo.toml  Readme.md
.github/workflows/: general.yml
src/: lib.rs  main.rs
tests/: health_check.rs
